# ldt-rosatom

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  create_graph.py  data.json  lol.py  main.cpp  run.sh  totime.py
dataset/: 17. Rosatom.docx  GraphTest.xlsx  ScheduleTest.xlsx  edges.json  vertices.json  ~$IntegrVelocity.xlsx  ГрафДанные.xlsx  Расписание движения судов.xlsx
run/: edges.json  schedule_raw.json
scripts/: a.py  create_graph.py  ice_stats.py  totime.py  validate.py  vertices.json
src/: graph.h  ice_sectors.cpp  ice_sectors.h  matrix.h  parser.cpp  parser.h  path.cpp  path.h  structs.h  util.h
src/algos/: algos.h  greedy.cpp  optimization.cpp  pseudo_exhaustive.cpp
src/graph/: graph.h
src/tests/: test.cpp  test.h  validate.h
webservice/: app.py
webservice/run/: create_graph.py  totime.py
webservice/static/: frappe-gantt.js  main.js  style.css
webservice/templates/: index.html
website/: index.html
website/static/: data.json  frappe-gantt.css  frappe-gantt.js  main.js  style.css
